Fix style, which made the canvas clip on small screens

--- a/src/css/simple.css
+++ b/src/css/simple.css
@@ -11,7 +11,6 @@ body {
 }
 .container.centered-container {
   margin: 0 auto;
-  max-width: 960px;
 }
 
 .with-rows {
